--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DjiDemo</string>
+    <string name="app_name">罗盘机场</string>
 
 
     <string name="title_activity_connection">ConnectionActivity</string>
